--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/dennismesina/ContactUs#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.9"
   }
 }
